Clases matriz (un par de fallos)

--- a/config/ASLB.cfg
+++ b/config/ASLB.cfg
@@ -5,7 +5,7 @@
 		<max-of-generations>1000</max-of-generations>
 		<species type="matrizindividual.MatrizIndividualSpecies" genotype-length="10"/>
 		<evaluator type="main.ASLB" file-name="config/berlin52.tsp" number-operations="10"/>
-		<provider type="matrizindividual.MatrizIndividualCreate" />
+		<provider type="matrizindividual.MatrizIndividualCreator" />
 		<parents-selector type="net.sf.jclec.selector.TournamentSelector">
 			<tournament-size>2</tournament-size>
 		</parents-selector>
