--- a/config/ASLB.cfg
+++ b/config/ASLB.cfg
@@ -3,7 +3,7 @@
 		<rand-gen-factory type="net.sf.jclec.util.random.RanecuFactory" seed="987328938"/>
 		<population-size>100</population-size>
 		<max-of-generations>1000</max-of-generations>
-		<species type="matrizindividual.MatrizIndividualSpecies" genotype-length="10"/>
+		<species type="matrizindividual.MatrizIndividualSpecies" num-estaciones="3" genotype-length="10"/>
 		<evaluator type="main.ASLB" file-name="config/berlin52.tsp" number-operations="10"/>
 		<provider type="matrizindividual.MatrizIndividualCreator" />
 		<parents-selector type="net.sf.jclec.selector.TournamentSelector">
