Mutacion y recombinacion(falta reocombinacion))

--- a/config/ASLB.cfg
+++ b/config/ASLB.cfg
@@ -9,8 +9,8 @@
 		<parents-selector type="net.sf.jclec.selector.TournamentSelector">
 			<tournament-size>2</tournament-size>
 		</parents-selector>
-		<mutator type="net.sf.jclec.orderarray.mut.Matriz2OptMutator" mut-prob="0.2" />
-		<recombinator type="net.sf.jclec.orderarray.rec.MatrizPMXCrossover" rec-prob="0.9" />
+		<mutator type="matrizindividual.MutacionAdyacente" mut-prob="0.2" />
+		<recombinator type="matrizindividual.rec.MatrizPMXCrossover" rec-prob="0.9" />
 		<listener type="net.sf.jclec.listener.PopulationReporter">
 			<report-frequency>50</report-frequency>
 			<report-on-file>false</report-on-file>
