--- a/config/ASLB.cfg
+++ b/config/ASLB.cfg
@@ -4,13 +4,12 @@
 		<population-size>100</population-size>
 		<max-of-generations>1000</max-of-generations>
 		<species type="matrizindividual.MatrizIndividualSpecies" num-estaciones="3" genotype-length="10"/>
-		<evaluator type="main.ASLB" file-name="config/berlin52.tsp" number-operations="10"/>
+		<evaluator type="main.ASLB" file-name="config/grafo1.aslb" number-operations="10"/>
 		<provider type="matrizindividual.MatrizIndividualCreator" />
 		<parents-selector type="net.sf.jclec.selector.TournamentSelector">
 			<tournament-size>2</tournament-size>
 		</parents-selector>
 		<mutator type="matrizindividual.MutacionAdyacente" mut-prob="0.2" />
-		<recombinator type="matrizindividual.rec.MatrizPMXCrossover" rec-prob="0.9" />
 		<listener type="net.sf.jclec.listener.PopulationReporter">
 			<report-frequency>50</report-frequency>
 			<report-on-file>false</report-on-file>
