--- a/config/ASLB.cfg
+++ b/config/ASLB.cfg
@@ -3,13 +3,14 @@
 		<rand-gen-factory type="net.sf.jclec.util.random.RanecuFactory" seed="987328938"/>
 		<population-size>100</population-size>
 		<max-of-generations>1000</max-of-generations>
-		<species type="matrizindividual.MatrizIndividualSpecies" num-estaciones="3" genotype-length="10"/>
-		<evaluator type="main.ASLB" file-name="config/grafo1.aslb" number-operations="10"/>
-		<provider type="matrizindividual.MatrizIndividualCreator" />
+		<species type="net.sf.jclec.intarray.IntArrayIndividualSpecies" genotype-length="10"/>
+		<evaluator type="main.ASLB" file-name="config/grafo1.aslb" number-operations="10" number-estaciones="3"/>
+		<provider type="net.sf.jclec.intarray.IntArrayCreator" />
 		<parents-selector type="net.sf.jclec.selector.TournamentSelector">
 			<tournament-size>2</tournament-size>
 		</parents-selector>
-		<mutator type="matrizindividual.MutacionAdyacente" mut-prob="0.2" />
+		<mutator type="net.sf.jclec.intarray.mut.OneLocusMutator" mut-prob="0.2" />
+		<recombinator type="net.sf.jclec.intarray.rec.OnePointCrossover" rec-prob="0.9" />
 		<listener type="net.sf.jclec.listener.PopulationReporter">
 			<report-frequency>50</report-frequency>
 			<report-on-file>false</report-on-file>
