--- a/config/ASLB.cfg
+++ b/config/ASLB.cfg
@@ -9,7 +9,7 @@
 		<parents-selector type="net.sf.jclec.selector.TournamentSelector">
 			<tournament-size>2</tournament-size>
 		</parents-selector>
-		<mutator type="net.sf.jclec.intarray.mut.OneLocusMutator" mut-prob="0.2" />
+		<mutator type="net.sf.jclec.intarray.mut.MutacionAdyacenteArray" mut-prob="0.2" />
 		<recombinator type="net.sf.jclec.intarray.rec.OnePointCrossover" rec-prob="0.9" />
 		<listener type="net.sf.jclec.listener.PopulationReporter">
 			<report-frequency>50</report-frequency>
