--- a/config/ASLB2.cfg
+++ b/config/ASLB2.cfg
@@ -4,7 +4,7 @@
 		<population-size>100</population-size>
 		<max-of-generations>1000</max-of-generations>
 		<species type="net.sf.jclec.intarray.IntArrayIndividualSpecies" genotype-length="15" numero-estaciones="3"/>
-		<evaluator type="tutorial.ASLB" file-name="examples/cities/grafo2.aslb" number-operations="15" number-estaciones="3"/>
+		<evaluator type="main.ASLB" file-name="config/grafo2.aslb" number-operations="15" number-estaciones="3"/>
 		<provider type="net.sf.jclec.intarray.IntArrayCreator" />
 		<parents-selector type="net.sf.jclec.selector.TournamentSelector">
 			<tournament-size>2</tournament-size>
