--- a/config/ASLB3.cfg
+++ b/config/ASLB3.cfg
@@ -4,7 +4,7 @@
 		<population-size>100</population-size>
 		<max-of-generations>1000</max-of-generations>
 		<species type="net.sf.jclec.intarray.IntArrayIndividualSpecies" genotype-length="30" numero-estaciones="5"/>
-		<evaluator type="tutorial.ASLB" file-name="examples/cities/grafo3.aslb" number-operations="30" number-estaciones="5"/>
+		<evaluator type="main.ASLB" file-name="config/grafo3.aslb" number-operations="30" number-estaciones="5"/>
 		<provider type="net.sf.jclec.intarray.IntArrayCreator" />
 		<parents-selector type="net.sf.jclec.selector.TournamentSelector">
 			<tournament-size>2</tournament-size>
